--- a/my-app/src/stores/Store.css
+++ b/my-app/src/stores/Store.css
@@ -163,12 +163,12 @@ header {
     margin: 0;
     font-weight: bold; 
     font-size: 1.5em; 
-  }
+}
   
-  .itemBlock > div:nth-child(4) {
+.itemBlock > div:nth-child(4) {
     font-weight: bold; /* Make the "Many in stock" text bold */
     color: gray;
-  }
+}
   
 .addItemButton {
     padding: 10px 15px;
@@ -261,6 +261,10 @@ header {
 .eachItem li {
     margin: 0;
     padding: 0;
+}
+
+.itemName {
+    font-weight: bold;
 }
   
 .addDelete {
